Added element encapsulation and renamed the plugin

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,6 +1,6 @@
-@mixin footer-navigation-background($style, $color, $border-color) {
+@mixin tabs-like-navigation-background($style, $color, $border-color) {
   .#{$style} {
-    &.footer-navigation {
+    &.tabs-like-navigation {
       background-color: $color;
       background-image: linear-gradient(0deg, $border-color, $border-color 50%, transparent 50%);
       border-color: $border-color;
@@ -8,13 +8,13 @@
   }
 }
 
-@mixin footer-navigation-color($style, $color) {
+@mixin tabs-like-navigation-color($style, $color) {
   .#{$style} {
     navigation-item a {
-      color: rgba($color, $footer-navigation-off-opacity);
+      color: rgba($color, $tabs-like-navigation-off-opacity);
       opacity: 1;
       .badge {
-        opacity: $footer-navigation-off-opacity;
+        opacity: $tabs-like-navigation-off-opacity;
       }
       &.active,
       &.activated {
